# Footstats

./: .coverage  .coveragerc  .env.example  .gcloudignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BETA_LAUNCH.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PROMPT_PHASE9.md  DAILY_ANALYSIS_2026-05-13.md  DAILY_ANALYSIS_2026-05-18.md  DAILY_ANALYSIS_2026-05-20.md  DAILY_REPORT_2026-06-07.md  DAILY_REPORT_2026-06-08.md  Dockerfile  Dockerfile.api  Dockerfile.jobs  LICENSE  PHASE3_SPEC.md  PHASE4_SPEC.md  PROJECT_STATE.md  PROJECT_STRUCTURE.md  README.md  README.pl.md  STATUS.md  TODO.md  brain_graph.html  check_settlement.py  check_settlement_48h.py  check_settlement_recent.py  docker-compose.yml  maintenance_prompt.md  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt  validation_errors.csv  (+1 more)
.backups/: 20260609_161532_TODO.md  20260610_090152_response_cache.py  20260610_091942_TODO.md
.github/: dependabot.yml
.playwright-mcp/: page-2026-06-14T21-58-27-278Z.yml
.vexp/: manifest.json
data/: model_calibration.json
docs/: BETA_READINESS.md  DAILY_ANALYSIS_2026-05-21.md  DAILY_ANALYSIS_2026-05-22.md  DAILY_ANALYSIS_2026-05-24.md  DAILY_ANALYSIS_2026-05-27.md  DAILY_ANALYSIS_2026-05-30.md  DAILY_ANALYSIS_2026-05-31.md  DAILY_ANALYSIS_2026-06-03.md  PREDICTION_ROADMAP.md  PROJECT_STATE.md  QUICKSTART.md  ROADMAP_IDEAS.md  RUNBOOK_2026-08-01.md  cloud_migration.md
scripts/: accuracy_report.py  backfill_leg_results.py  backtest_calibration.py  backtest_goals_value.py  backup_db.py  backup_db.sh  calibration_monitor.py  check_syntax.py  czysc_baze.py  evict_cache.py  fix_coupon_statuses.py  insert_training_coupons.py  preflight_footstats.py  refresh_players.py  run_daily.bat  run_job.sh  run_operator.bat  run_walkforward_prod.py  sanity_check.py  schedule_agents.ps1  sentry_test.py  validate_calibration_oos.py  visualize_brain.py
tests/: conftest.py  test_accuracy_report.py  test_admin_user.py  test_af_odds.py  test_ai_output.py  test_ai_scoring.py  test_analyses_endpoint.py  test_analyses_route.py  test_api_football_budget.py  test_api_import_resilience.py  test_api_integration_cache.py  test_api_routes.py  test_api_timeout.py  test_async_utils.py  test_auth.py  test_availability_edge.py  test_backtest_db.py  test_backtest_engine_prod_guard.py  test_backup_db.py  test_bankroll.py  test_bankroll_api.py  test_betbuilder_conflicts.py  test_betbuilder_rules.py  test_betting_utils.py  test_broad_except_audit.py  test_c2_tip_override_realny.py  test_cache.py  test_cache_evict.py  test_calibration.py  test_calibration_autorefit.py  test_calibration_metrics.py  test_checkpoint.py  test_circuit_breaker.py  test_cloud_draft.py  test_clv_tracker.py  (+122 more)
(+232 files in other folders)
