[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "footstats"
version = "3.4"
description = "Football statistics and prediction engine (Poisson + ML)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "reportlab>=4.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "slowapi>=0.1.9",
    "httpx>=0.27",
    "fastapi-mcp>=0.3",
    "tenacity>=8.0",
]

[project.optional-dependencies]
api = [
    "sentry-sdk[fastapi]>=2.0",
    "psycopg2-binary>=2.9",
]
ai = [
    "groq>=0.4",
    "langfuse>=2.0",
]
scraper = [
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
]
dashboard = [
    "streamlit>=1.32",
]
cloud = [
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.scripts]
footstats = "footstats.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"footstats.data" = ["*.md", "*.json", "*.csv"]

[tool.pytest.ini_options]
markers = [
    "unit: unit tests (fast, no external dependencies)",
    "integration: integration tests (may require network or credentials)",
    "slow: slow tests",
]
testpaths = ["tests"]
python_files = "test_*.py"

# ── Lint (ruff) ────────────────────────────────────────────────────────────
# Gate CI start: błędy składni (E9) + pyflakes (F: martwe importy/zmienne,
# undefined, redefinicje). Stylistyka E4/E7 (import-not-at-top, multi-statement,
# ambiguous-name) ODŁOŻONA — rozsiana po legacy/god-modułach, ratchet później.
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F"]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-eksportuje publiczne API → F401 (unused-import) zamierzone.
"__init__.py" = ["F401"]
# Testy: nieużywane bindowanie lokalne (np. response = client.get(...) dla
# side-effectu cache) to częsty, niskoryzykowny wzorzec → F841 wyłączone.
"tests/*" = ["F841"]

# ── Type-check (mypy) ──────────────────────────────────────────────────────
# Lenient na starcie (legacy nietypowany): brak strict, milczące importy.
# Gate CI obejmuje wąski czysty zakres (scrapers/sources) — ratchet w górę.
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
check_untyped_defs = false
disable_error_code = ["import-untyped"]
